# blue-fairy-orchestrator

./: .gitignore
cli/: pyproject.toml
cli/blue_fairy_cli/: __init__.py  client.py  daemon.py  main.py
common/: pyproject.toml
common/blue_fairy_common/: __init__.py  config.py  listener_events.py  plugin_types.py  types.py
supervisor/: pyproject.toml
supervisor/blue_fairy_supervisor/: __init__.py  api.py  continuity.py  deploy_keys.py  docker_mgr.py  lifecycle.py  matrix_manager.py  mcp_entrypoint.py  mcp_server.py  observability.py  otel_client.py  state.py
supervisor/blue_fairy_supervisor/static/: index.html
supervisor/blue_fairy_supervisor/templates/: homeserver.yaml.template  log_config.yaml.template
