[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue-fairy-cli"
version = "0.2.0"
description = "Blue Fairy CLI tool"
requires-python = ">=3.11"
dependencies = [
    "blue-fairy-common",
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
blue-fairy = "blue_fairy_cli.main:cli"
