[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue-fairy-common"
version = "0.2.0"
description = "Shared configuration and types for Blue Fairy"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
