[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue-fairy-supervisor"
version = "0.2.0"
description = "Blue Fairy supervisor daemon"
requires-python = ">=3.11"
dependencies = [
    "blue-fairy-common",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "docker>=7.0",
    "matrix-nio>=0.24",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "cryptography>=41.0",
    "mcp>=0.9.0",
    "requests>=2.31.0",
    "PyGithub>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
